<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WKD Schedule</string>
    <string name="description">Application is used to search for WKD schedule.</string>
    <string name="main_up_text">Choose first and last station.</string>
    <string name="main_from_text">From station:</string>
    <string name="main_to_text">To station:</string>
    <string name="main_where_am_i">Gdzie jesteś?</string>
    <string name="main_location_text">Współrzędne:</string>
    <string name="main_search_text">Search</string>
    <string name="menu_info">Info</string>
    <string name="menu_donate">Contribute</string>
    <string name="menu_update">Update</string>
    <string name="menu_other_apps">Other apps</string>
    <string name="positive_button">Ok</string>
    <string name="connection_failed_title">Problem with internet connection!</string>
	<string name="connection_failed_mess">There was a problem connecting with internet. Check if you are connected. If problem repeats tell us about it!</string>
	<string name="update_database_success">Database update success!</string>
	<string name="database_insert_error_title">Problem with saving to local database.</string>
	<string name="database_insert_error_message">There was a problem while updating local database. If it repeats please tell us about it!</string>
	<string name="station_pick_error_title">Error in station select.</string>
	<string name="station_pick_error_mess">You are at last station, you cannot choose this station!</string>
	<string name="show_all">Show all</string>
	<string name="dont_show_all">"Don't show all"</string>
	<string name="downloading_schedules">Downloading. Please wait...</string>
	<string name="have_not_found_connections">Unforunetally, there was no connections.</string>
	<string name="there_is_no_network_connection">No connection with internet!</string>
	<string name="refresh">Refresh</string>
	<string name="info">Informations</string>
	<string name="downloading_schedule">Downloading schedule</string>
	<string name="info_text">
		"Shortcuts:\n\n- A - not riding between W-wa Śródmieście WKD - Milanówek from monday to friday except christmass; between Podkowa Leśna - Milanówek in christmass days and saturdays\n- D - riding from monday to friday excepts christmass\n- 1 - don't rides in july and august\n- 2 - kursuje tylko w lipcu i sierpniu\n- 3 - riding from monday to friday except christmass\n\n
		WKD Schedule automatically now when is christmass day, week day or normal day and knows when are vacations. It only shows real connections. But user can see all connections hitting menu button: \"Show all\".
		\n\nOn left size there is information how much time left for train departure. Application shows connection 5 hours ahead. Also trains it shows trains that leave, to 5 minutes ago."
	</string>
	<string name="main_info_text">
		"WKD Schedule 1.9\n\n
		Application is unofficial appliaction of WKD schedule.\n\n
		Message published by users are theirs private messages. Author does not hold responsibility for what they writes.\n\n
		Thanks for Dant for icons.\n\n
		\u00a9 2012 Paweł Janeczek\n\n"
		
	</string>
	<string name="show_now">Now</string>
	<string name="specify_time">Choose time</string>
	<string name="choose_date_and_time_text">Choose date and time of departure:</string>
	<string name="user_messages_text">Messages from users</string>
	<string name="loader_frames_duration">150</string>
	<string name="username">Your nick (max.30 chars)</string>
	<string name="message">Write message</string>
	<string name="adding_new_message">Adding new message</string>
	<string name="noone"></string>
	<string name="add">Add</string>
	<string name="cancel">Cancel</string>
	<string name="fields_cannot_be_empty">Fields cannot be empty</string>
	<string name="uploading_message">Sending message...</string>
	<string name="uploading_message_success">Message sent success</string>
	<string name="uploading_message_error">There was an error during sending message</string>
	<string name="have_not_found_messages">There are no messages found</string>
	<string name="creating_new_message">Creating new message</string>
	
	<string name="summary_local_schedules">Local schedule database (does not need internet connection)</string>
	<string name="title_local_schedules">Local databse</string>
	<string name="summary_check_updates">Checking on starting application if there is new schedule database.</string>
	<string name="title_check_updates">Check schedule updates</string>
	<string name="summary_username">User name, which is used in messages</string>
	<string name="title_username">User nick</string>
	<string name="version">Schedule version</string>
	
	<string name="do_you_want_local_schedule">Do you want have local schedule? \n\If you choose yes, it will download WKD schedule and you want have to connect with internet to check for connections. \n\nIf you choose yes, on every search application will use internet.</string>
	<string name="new_schedule">There is new WKD Schedule. Do you want to download it?</string>
	<string name="menu_settings">Settings</string>
	
	<string name="menu_synch">Update schedule</string>
	
	<string name="messages">Messages</string>
	
	<string name="only_local_details">Details of connections are only visible when you use local schedule database.</string>
	<string name="connection_details">Connection details</string>
	<string name="ok">Ok</string>
	
	<string name="no_connection_schedule_check">No internet connection - application cannot check if there is new schedule.</string>
	<string name="schedule_new_version">New schedule! If you want to download it choose update from menu. If you want update it application will use online mode.</string>
	<string name="checking_schedule_version">"Checking WKD schedule"</string>
	<string name="have_newest_schedule">Your schedule is up to date.</string>
	<string name="error_during_version_check">There was an error during new version checking.</string>
	
	<string name="success_schedule_download">Schedule update success!</string>
	<string name="error_schedule_download">"There was an error during schedule download. Check connection and retry."</string>

    <string name="my_applications">"https://play.google.com/store/apps/developer?id=Paweł+Janeczek"</string>

    <string name="update_info"> "If you want to turn of automatic schedule checking go to settings."</string>

    <string name="rozklad_wkd_premium">"WKD Schedule without adverts!"</string>

    <string name="menu_messages">Messages</string>

    <string name="search_result">Results</string>

    <string name="premium_info">"Do you like WKD Schedule?\nPlease buy premium version of application, without ads!"</string>

    <string name="dont_show_again">"Don't show"</string>

    <string name="premium_title">Premium version</string>
    <string name="buy">Buy</string>
    <string name="close">Close</string>
    <string name="premium_url">"https://play.google.com/store/apps/details?id=pj.rozkladWKD.premium"</string>
    <string name="menu_premium">Premium</string>

    <string name="turn_on_push_message">Do you want to turn on push messages?\n\nYou will be noticed about users comments and WKD events.</string>
    <string name="push_notifications">Push notifications</string>

    <string name="push_notifications_info">There is new feature - Push Notifications. More info on application play market page. You can turn it off in settings.</string>

    <string name="new_message">"New message [%s]"</string>

    <string name="general">General</string>

    <string name="notifications">Notifications</string>

    <string name="summary_notification_sound">Plays default sound on new notification.</string>
    <string name="title_notification_sound">Sound</string>
    <string name="summary_notification_vibration">Vibrate on new notification.</string>
    <string name="title_notification_vibration">Vibration</string>
    <string name="message_too_long">Message to long (max. 512 chars)</string>
    <string name="set_username_title">Set your nick</string>
    <string name="field_value_too_long">Value too long</string>
    <string name="title_app">Application</string>
    <string name="title_wkd">WKD</string>
    <string name="title_events">Events</string>

    <string name="no_messages">No messages</string>
    <string name="loading_messages">Loading...</string>

    <string name="summary_push_categories">Choose which categories you want to be informed.</string>
    <string name="title_push_categories">Push categories</string>
    <string name="EVS">Events</string>
    <string name="WKD">WKD</string>
    <string name="APP">Application</string>
</resources>
