<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tfn="http://schemas.android.com/apk/res-auto">
	<PreferenceCategory 
        android:title="@string/general"
        android:key="preference">

		<CheckBoxPreference
                android:key="local_schedules"
                android:summary="@string/summary_local_schedules"
                android:defaultValue="true"
                android:title="@string/title_local_schedules"/>
        <CheckBoxPreference
        	android:key="check_updates"
        	android:summary="@string/summary_check_updates"
        	android:defaultValue="true"
        	android:title="@string/title_check_updates"
        	android:dependency="local_schedules"/>
        <EditTextPreference
        	android:key="username"
        	android:summary="@string/summary_username"
        	android:defaultValue="@string/noone"
        	android:title="@string/title_username"/>
    </PreferenceCategory>
    <PreferenceCategory
            android:title="@string/notifications"
            android:key="preference">
        <CheckBoxPreference
                android:key="pushturnedon"
                android:summary="@string/summary_push"
                android:defaultValue="true"
                android:title="@string/title_push"/>

        <com.threefiftynice.android.preference.ListPreferenceMultiSelect
                tfn:separator=";"
                android:defaultValue="EVS;APP"
                android:key="push_categories"
                android:title="@string/title_push_categories" android:dialogTitle="@string/title_push_categories"
                android:summary="@string/summary_push_categories"
                android:entries="@array/push_categories"
                android:entryValues="@array/push_categories_values"/>

        <CheckBoxPreference
                android:key="notification_sound"
                android:summary="@string/summary_notification_sound"
                android:defaultValue="true"
                android:title="@string/title_notification_sound"
                android:dependency="pushturnedon"/>

        <CheckBoxPreference
                android:key="notification_vibration"
                android:summary="@string/summary_notification_vibration"
                android:defaultValue="true"
                android:title="@string/title_notification_vibration"
                android:dependency="pushturnedon"/>
    </PreferenceCategory>
    <PreferenceCategory
    	android:title="Informacje"
    	android:key="info">
    	
    	<Preference
    		android:key="db_version"
    		android:title="@string/version"
    		android:defaultValue="-1"
    		/>
    </PreferenceCategory>

</PreferenceScreen>