<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:paddingTop="3dp" android:paddingBottom="3dp" android:paddingLeft="1dp" android:paddingRight="1dp">
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_weight="1" 
		android:id="@+id/scroll_view"
		>

			<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical" android:layout_width="fill_parent"
				android:layout_height="fill_parent" android:background="@layout/rounded_background">

				<TextView android:id="@+id/from_text"
					android:layout_alignParentTop="true" android:layout_width="fill_parent"
					android:layout_height="wrap_content" android:text="@string/main_from_text"
					android:paddingBottom="5px" android:paddingTop="10px" android:paddingLeft="4px"/>
				<RelativeLayout 
					android:layout_below="@id/from_text"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
 					android:id="@+id/from_rl_spinner" android:paddingLeft="3px">
					<Spinner android:id="@+id/from_spinner"
						android:layout_width="fill_parent" android:layout_height="wrap_content"
						android:layout_toLeftOf="@+id/change_station_view1"/>
					<ImageButton android:src="@drawable/ic_change_stations"
						android:id="@+id/change_station_view1" android:layout_width="wrap_content"
						android:layout_height="50dp" android:layout_alignParentRight="true" />
				</RelativeLayout>

				<TextView android:id="@+id/to_text"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:text="@string/main_to_text" android:paddingTop="10px" android:paddingBottom="5px"
					android:layout_below="@id/from_rl_spinner" android:paddingLeft="4px"/>
				<RelativeLayout 
					android:layout_below="@id/to_text"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
 					android:id="@+id/to_rl_spinner" android:paddingLeft="3px">
					<Spinner android:id="@+id/to_spinner"
						android:layout_width="fill_parent" android:layout_height="wrap_content"
						android:layout_toLeftOf="@+id/change_station_view2"/>
					<ImageButton android:src="@drawable/ic_change_stations"
						android:id="@+id/change_station_view2" android:layout_width="wrap_content"
						android:layout_height="50dp" android:layout_alignParentRight="true" />
				</RelativeLayout>
				<View
					android:id="@+id/separator2"
					android:layout_below="@id/to_rl_spinner"
					android:layout_height="1dp" android:background="@color/separator_color"
					android:layout_width="fill_parent"/>
				<TextView android:id="@+id/choose_date_and_time_text"
					android:layout_width="fill_parent" android:layout_height="wrap_content"
					android:text="@string/choose_date_and_time_text" android:paddingTop="10px" android:paddingBottom="5px"
					android:layout_below="@id/separator2" android:paddingLeft="4px"/>
				<RelativeLayout
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:id="@+id/date_time_rl"
					android:layout_below="@id/choose_date_and_time_text"
					android:paddingLeft="3px"
					android:paddingRight="3px">
					<Button
						android:id="@+id/set_time"
						android:layout_height="wrap_content"
						android:layout_width="110dp"
						android:layout_alignParentRight="true"
							
					/>	
					<Button
						android:id="@+id/set_date"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content"
						android:layout_toLeftOf="@id/set_time"
					/>
				</RelativeLayout>
				<RelativeLayout
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:id="@+id/checkbox_rl"
					android:layout_below="@id/date_time_rl"
					android:paddingRight="3px">
					
					<CheckBox
						android:id="@+id/show_now"
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:layout_alignParentRight="true"
										
					/>	
					<TextView
						android:id="@+id/show_no_text"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_toLeftOf="@id/show_now"
						android:text="@string/show_now"
						android:layout_centerVertical="true"
					/>
				</RelativeLayout>			
				
				<RelativeLayout
					android:layout_height="wrap_content"
					android:layout_width="fill_parent"
					android:layout_below="@id/checkbox_rl">
					<com.google.ads.AdView android:id="@+id/adView"
	                         android:layout_width="wrap_content"
	                         android:layout_height="wrap_content"
	                         ads:adUnitId="a14e08ee8b23f82"
	                         ads:adSize="BANNER"
	                         ads:loadAdOnCreate="true"/>
                </RelativeLayout>

			</RelativeLayout>

	</ScrollView>
	
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_weight="1" android:visibility="gone" 
		android:id="@+id/message_layout" android:background="@layout/rounded_background">
		<LinearLayout
					android:id="@+id/user_messages_layout"

				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				android:paddingBottom="5px" android:paddingTop="10px" android:paddingLeft="4px"
			>
				<TextView
					android:id="@+id/user_messages_text"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" android:text="@string/user_messages_text"
					
				/>
				<ImageView
					android:id="@+id/user_messages_loader"
					android:layout_height="fill_parent"
					android:layout_width="wrap_content"
					android:paddingLeft="20dp"
					android:visibility="invisible"
				/>
				
			</LinearLayout>
		<RelativeLayout
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:id="@+id/write_refres_messages"
			android:layout_below="@id/user_messages_layout"
			android:paddingRight="3px">
			<ImageButton android:src="@drawable/ic_change_stations"
				android:id="@+id/user_messages_refresh" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"/>
			<ImageButton android:src="@drawable/ic_edit"
				android:id="@+id/user_messages_add" 
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentRight="true"/>

		</RelativeLayout>
		<ListView android:id="@id/android:list"
			android:layout_below="@id/write_refres_messages"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:cacheColorHint="@color/main_layout_background"
              android:divider="@color/separator_color"
              android:dividerHeight="1dp"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:minHeight="100dp"

              />

           
	</RelativeLayout>
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="90dp" android:layout_weight="1" android:background="@layout/rounded_button_background" >



		<!--<Button android:id="@+id/navigate_button"
		android:layout_height="fill_parent"
		android:layout_width="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_marginLeft="15px"
		android:text="@string/main_where_am_i" /> 
		<Button
		android:id="@+id/search_button" android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:layout_toLeftOf="@id/navigate_button"
		android:text="@string/main_search_text" /> 
		-->

		<Button
		android:id="@+id/search_button" android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/main_search_text" 
		android:layout_centerInParent="true"
		android:gravity="center_horizontal|center_vertical"/>
		<ImageButton
			android:src="@drawable/ic_dialog_email"
			android:id="@+id/show_messages"
			android:layout_width="60dp"
			android:layout_height="60dp"
			android:layout_alignParentRight="true"
			/>
		

	</RelativeLayout>

</LinearLayout>

	<!--
		
	-->